--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -42,10 +42,7 @@
 </p><p>Sketcher nen&iacute; ur&#269;en k vytv&aacute;&#345;en&iacute; 2D v&yacute;kres&#367;. Jakmile jsou n&aacute;&#269;rtky pou&#382;ity k vytvo&#345;en&iacute; pevn&eacute;ho prvku, jsou automaticky skryty a vazby jsou viditeln&eacute; pouze v re&#382;imu &uacute;pravy n&aacute;&#269;rtu. Pokud pot&#345;ebujete pouze vytvo&#345;it 2D pohledy pro tisk a nechcete vytv&aacute;&#345;et 3D modely, pod&iacute;vejte se na <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plochu Draft</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FC_ConstrainedSketch.png&amp;filetimestamp=20180803221416&amp;.html" class="mw-file-description"><img src="../File/FC_ConstrainedSketch.png" decoding="async" width="450" height="387" class="mw-file-element" data-file-width="523" data-file-height="450"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p><i>Z&aacute;kladn&iacute; pln&#283; vazben&yacute; n&aacute;&#269;rt&lrm;.</i>
-</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Pln&#283; v&aacute;zan&aacute; skica</p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Constraints">Constraints</span></h2>
 </div>
@@ -847,15 +844,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118103157
+Cached time: 20260118103253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.457 seconds
-Real time usage: 0.678 seconds
-Preprocessor visited node count: 1563/1000000
-Post&#8208;expand include size: 34317/2097152 bytes
-Template argument size: 9744/2097152 bytes
+CPU time usage: 0.412 seconds
+Real time usage: 0.647 seconds
+Preprocessor visited node count: 1572/1000000
+Post&#8208;expand include size: 34973/2097152 bytes
+Template argument size: 9764/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -863,19 +860,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   68.667      1 -total
- 23.37%   16.047      1 Template:Sketcher_Tools_navi/cs
- 15.51%   10.653      2 Template:Navigation_menu_2
- 14.54%    9.985      1 Template:Userdocnavi/cs
- 10.06%    6.905     35 Template:Version
- 10.00%    6.870      1 Template:PropertyView
-  7.02%    4.822      8 Template:VersionPlus
-  5.84%    4.007      2 Template:Docnav
-  5.20%    3.572     14 Template:KEY
-  4.87%    3.341      5 Template:Caption
+100.00%   45.985      1 -total
+ 22.60%   10.393      1 Template:Sketcher_Tools_navi/cs
+ 16.78%    7.717      1 Template:PropertyView
+ 15.57%    7.158      2 Template:Navigation_menu_2
+ 14.39%    6.617      1 Template:Userdocnavi/cs
+ 11.61%    5.340      1 Template:Variable
+  6.60%    3.034      2 Template:Docnav
+  6.23%    2.867     35 Template:Version
+  5.43%    2.496     14 Template:KEY
+  5.38%    2.472      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103157 and revision id 1740185. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103253 and revision id 1740187. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
