--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -85,11 +85,8 @@
 </p><p><span id="Tools"></span>
 </p>
 <h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
-<div class="mw-translate-fuzzy">
-<h3><span id="N.C3.A1stroje_2"></span><span class="mw-headline" id="N&aacute;stroje_2">N&aacute;stroje</span></h3>
-<p>N&aacute;stroje pracovn&iacute; plochy Skic&aacute;&#345; jsou um&iacute;st&#283;ny v menu Skic&aacute;&#345;, kter&eacute; se zobraz&iacute; kdy&#382; nat&aacute;hnete pracovn&iacute; plochu Skic&aacute;&#345;.
+<p>N&aacute;stroje pracovn&iacute; plochy Sketcher se nach&aacute;zej&iacute; v menu Sketch a/nebo v n&#283;kolika panelech n&aacute;stroj&#367;. <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>: T&eacute;m&#283;&#345; v&scaron;echny panely n&aacute;stroj&#367; Sketcheru se zobrazuj&iacute; pouze v re&#382;imu &uacute;pravy skici. Jedinou v&yacute;jimkou je <a href="#Sketcher_toolbar">panel n&aacute;stroj&#367; Sketcheru</a>, kter&yacute; se zobrazuje pouze v p&#345;&iacute;pad&#283;, &#382;e &#382;&aacute;dn&aacute; skica nen&iacute; v re&#382;imu &uacute;pravy.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Some tools are also available from the <a href="../3D_View.html" title="3D View">3D View</a> context menu while a sketch is in edit mode, or from the context menus of the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a>.
 </p>
@@ -814,15 +811,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110338
+Cached time: 20260118110533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.402 seconds
-Real time usage: 0.762 seconds
-Preprocessor visited node count: 1560/1000000
-Post&#8208;expand include size: 35041/2097152 bytes
-Template argument size: 9804/2097152 bytes
+CPU time usage: 0.494 seconds
+Real time usage: 0.744 seconds
+Preprocessor visited node count: 1565/1000000
+Post&#8208;expand include size: 35120/2097152 bytes
+Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -830,19 +827,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   68.352      1 -total
- 23.48%   16.051      1 Template:Userdocnavi/cs
- 22.65%   15.484      1 Template:Sketcher_Tools_navi/cs
- 16.69%   11.409      2 Template:Navigation_menu_2
-  8.68%    5.931      1 Template:PropertyView
-  8.58%    5.866     35 Template:Version
-  6.96%    4.760      2 Template:Docnav
-  4.69%    3.204      8 Template:VersionPlus
-  4.67%    3.194     14 Template:KEY
-  4.58%    3.130      6 Template:Caption
+100.00%   54.432      1 -total
+ 22.28%   12.127      1 Template:Sketcher_Tools_navi/cs
+ 12.92%    7.035      2 Template:Navigation_menu_2
+ 12.32%    6.707      1 Template:PropertyView
+ 12.25%    6.669      1 Template:Userdocnavi/cs
+  7.78%    4.235      6 Template:Caption
+  7.65%    4.164      2 Template:Docnav
+  6.28%    3.420      1 Template:Variable
+  5.81%    3.165     14 Template:KEY
+  5.77%    3.142      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110337 and revision id 1740217. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110532 and revision id 1740219. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
