--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -91,9 +91,9 @@
 </p><p><span id="General"></span>
 </p>
 <h3><span id="Obecn.C3.A9"></span><span class="mw-headline" id="Obecn&eacute;">Obecn&eacute;</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Sketcher_toolbar">Sketcher toolbar</span></h4>
-</div>
+<p><span id="Sketcher_toolbar"></span>
+</p>
+<h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_sketcheru"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_sketcheru">N&aacute;strojov&aacute; li&scaron;ta sketcheru</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>: Creates a new sketch and opens the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a> to edit it.</li></ul>
 </div>
@@ -804,12 +804,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110735
+Cached time: 20260118110806
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.408 seconds
-Real time usage: 0.547 seconds
+CPU time usage: 0.478 seconds
+Real time usage: 0.906 seconds
 Preprocessor visited node count: 1563/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
@@ -820,19 +820,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.907      1 -total
- 25.70%   10.514      1 Template:Sketcher_Tools_navi/cs
- 17.26%    7.059      2 Template:Navigation_menu_2
- 14.11%    5.770      1 Template:Userdocnavi/cs
- 10.10%    4.131      1 Template:PropertyView
-  7.73%    3.161     36 Template:Version
-  6.92%    2.831      5 Template:MenuCommand
-  6.37%    2.604      6 Template:Caption
-  6.09%    2.491      1 Template:Variable
-  5.83%    2.383      2 Template:Docnav
+100.00%   40.860      1 -total
+ 30.16%   12.322      1 Template:Sketcher_Tools_navi/cs
+ 18.21%    7.442      2 Template:Navigation_menu_2
+ 10.71%    4.378      1 Template:PropertyView
+  9.70%    3.965      1 Template:Userdocnavi/cs
+  6.94%    2.837     36 Template:Version
+  6.16%    2.518      2 Template:Docnav
+  6.10%    2.491      6 Template:Caption
+  5.83%    2.382      1 Template:Variable
+  5.55%    2.267      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110734 and revision id 1740225. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110805 and revision id 1740227. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
