--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -94,9 +94,7 @@
 <p><span id="Sketcher_toolbar"></span>
 </p>
 <h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_sketcheru"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_sketcheru">N&aacute;strojov&aacute; li&scaron;ta sketcheru</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>: Creates a new sketch and opens the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a> to edit it.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_NewSketch.html" title="Sketcher NewSketch">Nov&yacute; n&aacute;&#269;rt</a>: Vytvo&#345;&iacute; nov&yacute; n&aacute;&#269;rt a otev&#345;e dialogov&eacute; okno <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Dialogu sketcheru</a> pro jeho &uacute;pravu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>: Opens the Sketcher Dialog to edit an existing sketch.</li></ul>
 </div>
@@ -804,13 +802,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118110806
+Cached time: 20260118111017
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.478 seconds
-Real time usage: 0.906 seconds
-Preprocessor visited node count: 1563/1000000
+CPU time usage: 0.415 seconds
+Real time usage: 0.604 seconds
+Preprocessor visited node count: 1562/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -820,19 +818,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.860      1 -total
- 30.16%   12.322      1 Template:Sketcher_Tools_navi/cs
- 18.21%    7.442      2 Template:Navigation_menu_2
- 10.71%    4.378      1 Template:PropertyView
-  9.70%    3.965      1 Template:Userdocnavi/cs
-  6.94%    2.837     36 Template:Version
-  6.16%    2.518      2 Template:Docnav
-  6.10%    2.491      6 Template:Caption
-  5.83%    2.382      1 Template:Variable
-  5.55%    2.267      8 Template:VersionPlus
+100.00%   38.650      1 -total
+ 22.89%    8.848      1 Template:Sketcher_Tools_navi/cs
+ 13.85%    5.353      1 Template:PropertyView
+ 13.35%    5.160      1 Template:Userdocnavi/cs
+ 11.93%    4.612      2 Template:Navigation_menu_2
+  9.45%    3.652     36 Template:Version
+  6.71%    2.592      8 Template:VersionPlus
+  6.64%    2.568      2 Template:Docnav
+  5.25%    2.030      1 Template:Variable
+  4.94%    1.911     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118110805 and revision id 1740227. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111016 and revision id 1740229. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
