--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -95,9 +95,7 @@
 </p>
 <h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_sketcheru"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_sketcheru">N&aacute;strojov&aacute; li&scaron;ta sketcheru</span></h4>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_NewSketch.html" title="Sketcher NewSketch">Nov&yacute; n&aacute;&#269;rt</a>: Vytvo&#345;&iacute; nov&yacute; n&aacute;&#269;rt a otev&#345;e dialogov&eacute; okno <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Dialogu sketcheru</a> pro jeho &uacute;pravu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>: Opens the Sketcher Dialog to edit an existing sketch.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Upravit n&aacute;&#269;rt</a>: Otev&#345;e dialogov&eacute; okno Sketcheru pro &uacute;pravu existuj&iacute;c&iacute;ho n&aacute;&#269;rtu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>: Attaches a sketch to selected geometry.</li></ul>
 </div>
@@ -802,13 +800,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111017
+Cached time: 20260118111058
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.415 seconds
-Real time usage: 0.604 seconds
-Preprocessor visited node count: 1562/1000000
+CPU time usage: 0.467 seconds
+Real time usage: 0.655 seconds
+Preprocessor visited node count: 1561/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -818,19 +816,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.650      1 -total
- 22.89%    8.848      1 Template:Sketcher_Tools_navi/cs
- 13.85%    5.353      1 Template:PropertyView
- 13.35%    5.160      1 Template:Userdocnavi/cs
- 11.93%    4.612      2 Template:Navigation_menu_2
-  9.45%    3.652     36 Template:Version
-  6.71%    2.592      8 Template:VersionPlus
-  6.64%    2.568      2 Template:Docnav
-  5.25%    2.030      1 Template:Variable
-  4.94%    1.911     14 Template:KEY
+100.00%   43.643      1 -total
+ 24.16%   10.543      1 Template:Sketcher_Tools_navi/cs
+ 15.81%    6.898      1 Template:PropertyView
+ 15.52%    6.775      2 Template:Navigation_menu_2
+ 13.87%    6.054      1 Template:Userdocnavi/cs
+  7.28%    3.176      2 Template:Docnav
+  6.57%    2.869     36 Template:Version
+  6.56%    2.864      1 Template:Variable
+  5.50%    2.402      5 Template:MenuCommand
+  5.16%    2.253      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111016 and revision id 1740229. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111058 and revision id 1740231. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
