--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -15,7 +15,7 @@
 <li><a href="../sk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&yacute; st&ocirc;l N&aacute;&#269;rtn&iacute;k (8% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="../fi/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; Sketcher (&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;) (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -96,9 +96,7 @@
 <h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_sketcheru"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_sketcheru">N&aacute;strojov&aacute; li&scaron;ta sketcheru</span></h4>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_NewSketch.svg&amp;filetimestamp=20231231201726&amp;.html" class="mw-file-description"><img src="../File/Sketcher_NewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_NewSketch.html" title="Sketcher NewSketch">Nov&yacute; n&aacute;&#269;rt</a>: Vytvo&#345;&iacute; nov&yacute; n&aacute;&#269;rt a otev&#345;e dialogov&eacute; okno <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Dialogu sketcheru</a> pro jeho &uacute;pravu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Upravit n&aacute;&#269;rt</a>: Otev&#345;e dialogov&eacute; okno Sketcheru pro &uacute;pravu existuj&iacute;c&iacute;ho n&aacute;&#269;rtu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>: Attaches a sketch to selected geometry.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">P&#345;ipojit n&aacute;&#269;rt</a>: P&#345;ipoj&iacute; n&aacute;&#269;rt k vybran&eacute; geometrii.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ReorientSketch.svg&amp;filetimestamp=20231231201806&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ReorientSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>: Places a sketch on one of the main planes with an optional offset. It can also be used to detach a sketch.</li></ul>
 </div>
@@ -800,13 +798,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111058
+Cached time: 20260118111155
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.467 seconds
-Real time usage: 0.655 seconds
-Preprocessor visited node count: 1561/1000000
+CPU time usage: 0.509 seconds
+Real time usage: 0.707 seconds
+Preprocessor visited node count: 1560/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -816,19 +814,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.643      1 -total
- 24.16%   10.543      1 Template:Sketcher_Tools_navi/cs
- 15.81%    6.898      1 Template:PropertyView
- 15.52%    6.775      2 Template:Navigation_menu_2
- 13.87%    6.054      1 Template:Userdocnavi/cs
-  7.28%    3.176      2 Template:Docnav
-  6.57%    2.869     36 Template:Version
-  6.56%    2.864      1 Template:Variable
-  5.50%    2.402      5 Template:MenuCommand
-  5.16%    2.253      6 Template:Caption
+100.00%   32.919      1 -total
+ 22.51%    7.411      1 Template:Sketcher_Tools_navi/cs
+ 17.52%    5.769      2 Template:Navigation_menu_2
+ 14.52%    4.781      1 Template:Userdocnavi/cs
+  9.80%    3.226      1 Template:PropertyView
+  7.87%    2.592     36 Template:Version
+  6.36%    2.094      2 Template:Docnav
+  5.67%    1.865      6 Template:Caption
+  5.55%    1.826     14 Template:KEY
+  5.17%    1.702      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111058 and revision id 1740231. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111155 and revision id 1740233. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
